fix: slider height jump

--- a/assets/styles/transitions.sass
+++ b/assets/styles/transitions.sass
@@ -16,6 +16,15 @@
 .fade-leave-to
   opacity: 0
 
+.sliderFade-enter-active,
+.sliderFade-leave-active
+  transition: 0s ease-in-out
+  opacity: 1
+
+.sliderFade-enter-from,
+.sliderFade-leave-to
+  opacity: 0
+
 .slideFromRight-enter-active,
 .slideFromRight-leave-active
   transition: 0.25s ease-in-out
